# AutoCorp

./: .env.example  .gitignore  LICENSE  README.md  SCREEN_DESCRIPTIONS.md  docs_screen_descriptions.md  pyproject.toml
$SCRATCH/: hdr.db  thread_sim.db
autocorp/: __init__.py
autocorp/agents/: __init__.py  accountant.py  base.py  brain.py  marketer.py  operator.py
autocorp/cli/: __init__.py  main.py
autocorp/core/: __init__.py  budget.py  config.py  graph.py  llm.py  messaging.py  models.py
autocorp/db/: __init__.py  brain.py
autocorp/tools/: __init__.py  budget.py  domains.py  email_accounts.py  github_tools.py  social.py  supabase_tools.py  vercel_tools.py
autocorp/ui/: __init__.py  chat_service.py  console.py  design.py  navigation.py  setup_wizard.py  streamlit_app.py  theme.py  workspace.py
autocorp/ui/.streamlit/: config.toml
autocorp/ui/assets/: streamlit_theme.css
autocorp/web/: __init__.py  api.py  app.py
autocorp/web/static/css/: app.css
autocorp/web/static/js/: app.js
autocorp/web/templates/: index.html
scripts/: demo_launch.sh
tests/: test_agent_chat.py  test_agent_colors_nav.py  test_brain_db.py  test_chat_format.py  test_config.py  test_domains.py  test_launch.py  test_navigation.py  test_skeleton_and_extras.py  test_streamlit_apptest.py  test_streamlit_ui_structure.py  test_theme.py  test_workspace_layout.py
