[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocorp"
version = "0.1.0"
description = "AutoCorp — Fully autonomous multi-agent AI Company Operating System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AutoCorp Contributors" }]
keywords = [
  "ai",
  "agents",
  "langgraph",
  "langchain",
  "multi-agent",
  "startup",
  "autonomous",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = [
  "langchain>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-community>=0.3.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.0",
  "PyGithub>=2.3.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "typer>=0.12.0",
  "click>=8.1.0",
  "prompt-toolkit>=3.0.0",
  "aiosqlite>=0.20.0",
  "tenacity>=8.3.0",
  "orjson>=3.10.0",
  "tabulate>=0.9.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]
local = [
  "langchain-ollama>=0.2.0",
]

[project.scripts]
autocorp = "autocorp.cli.main:app"

[project.urls]
Homepage = "https://github.com/lohithveerepalli/AutoCorp"
Repository = "https://github.com/lohithveerepalli/AutoCorp"
Issues = "https://github.com/lohithveerepalli/AutoCorp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autocorp*"]

[tool.setuptools.package-data]
autocorp = [
  "web/templates/*.html",
  "web/static/css/*.css",
  "web/static/js/*.js",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
